# bumblebee

./: .dockerignore  .env.example  .gitattributes  .gitignore  .railwayignore  Dockerfile  LICENSE  Makefile  README.md  SMOKE-VPS-SETUP-NOTES.md  gateway-off.cmd  gateway-on.cmd  gateway-status.cmd  package.json  pyproject.toml  railway.json
bumblebee/: __init__.py  __version__.py  config.py  entity.py  gateway_setup.py  health.py  main.py  models.py  setup_wizard.py
bumblebee/apps/: __init__.py  api.py
bumblebee/cognition/: __init__.py  deliberate.py  gemma.py  history_compression.py  inner_voice.py  poker_grounding.py  poker_prompts.py  reflex.py  reply_heuristics.py  router.py  senses.py
bumblebee/genesis/: __init__.py  creator.py  schema.py
bumblebee/identity/: __init__.py  desire.py  drives.py  emotions.py  evolution.py  noise_seeder.py  personality.py  soma.py  voice.py
bumblebee/inference/: __init__.py  factory.py  openai_transport.py  protocol.py  providers.py  types.py
bumblebee/inference_gateway/: __init__.py  __main__.py  app.py
bumblebee/memory/: __init__.py  automations_repo.py  beliefs.py  consolidation.py  distillation.py  episodic.py  imprints.py  journal.py  knowledge.py  narrative.py  pg_translate.py  postgres_store.py  procedural.py  projects.py  relational.py  relational_document.py  relational_reflection.py  seed_log.py  self_model.py  store.py
bumblebee/presence/: __init__.py  autonomy_transcript.py  daemon.py  embodiment.py  initiative.py  wake_cycle.py
bumblebee/storage/: __init__.py  attachment_ingestion.py  attachments.py  factory.py  protocol.py
bumblebee/utils/: __init__.py  clock.py  cloudflared_bootstrap.py  cloudflared_config.py  dotenv_merge.py  embeddings.py  gateway_health_probe.py  gateway_script.py  git_info.py  log.py  ollama_bootstrap.py  ollama_client.py  repo_dotenv.py  self_update.py  setup_preflight.py  stack_stop.py  tunnel_url_prompt.py  unified_diff_apply.py
config/examples/: hybrid_railway.yaml  local.yaml
configs/: default.yaml
configs/entities/: canary.example.yaml  canary.yaml  example.yaml
configs/noise_seeds/: concepts.txt
configs/poker_prompts/: default.yaml
docker/: entrypoint-railway.sh
docs/: TODO-hybrid-railway-setup.md  generative-noise.md
scripts/: build_poker_deck.py  bump_version.py  gateway.ps1  gateway.sh  ollama-reset.ps1  railway_reset_soma_baseline.py
scripts/windows/: gateway-off.cmd  gateway-on.cmd  gateway-restart.cmd  gateway-status.cmd
tests/: test_failure_handling.py  test_main_ask.py  test_version.py
tests/support/: stub_inference.py
tests/test_cognition/: test_context_compaction.py  test_deliberate.py  test_deliberate_loop.py  test_gemma.py  test_history_compression.py  test_poker_grounding.py  test_poker_prompts.py  test_router.py
tests/test_entity/: test_person_routes_persist.py
tests/test_hybrid/: test_smoke.py
tests/test_identity/: test_desire.py  test_drives.py  test_emotions.py  test_noise_seeder.py  test_soma.py  test_voice.py
tests/test_inference/: test_factory.py  test_openai_transport_payload.py
tests/test_inference_gateway/: test_surface.py
tests/test_memory/: test_consolidation.py  test_distillation.py  test_episodic.py  test_knowledge.py  test_operator_foundations.py  test_relational_document.py  (+1 more)
(+87 files in other folders)
