[project]
name = "bumblebee"
dynamic = ["version"]
description = "The first entitative harness — Gemma 4-native persistent digital entities"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "ddgs>=9.0",
    "mcp>=1.2",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "apscheduler>=3.10",
    "aiosqlite>=0.20",
    "numpy>=1.26",
    "click>=8.1",
    "psutil>=5.9",
    "dateparser>=1.2",
    "discord-py>=2.3",
    "python-telegram-bot>=21.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
gateway = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
railway = [
    "asyncpg>=0.29",
]
voice = [
    "edge-tts>=6.1",
]
pdf = [
    "pymupdf>=1.23",
]
youtube = [
    "youtube-transcript-api>=0.6",
]
browser = [
    "playwright>=1.40",
]
imagegen = [
    "fal-client>=0.4",
]
full = [
    "edge-tts>=6.1",
    "pymupdf>=1.23",
    "youtube-transcript-api>=0.6",
    "playwright>=1.40",
    "fal-client>=0.4",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "fastapi>=0.115",
    "httpx>=0.27",
]

[project.scripts]
bumblebee = "bumblebee.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "bumblebee/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["bumblebee"]

[tool.hatch.build.targets.wheel.force-include]
"assets/branding/yellow-bumblebee-agi.png" = "assets/branding/yellow-bumblebee-agi.png"

[tool.hatch.build.targets.sdist]
include = [
    "bumblebee/**",
    "assets/branding/**",
    "config/**",
    "configs/**",
    "tests/**",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
